ops/servicemesh/canary-release/apps.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
spec:
  selector:
    app: sample
  ports:
  - port: 8000
    targetPort: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-v1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: sample
        version: v1
    spec:
      containers:
      - name: sample
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/main-v1.go /app/server.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-v2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: sample
        version: v2
    spec:
      containers:
      - name: sample
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/main-v2.go /app/server.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-final
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: sample
        version: final
    spec:
      containers:
      - name: sample
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/main-final.go /app/server.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
