ops/servicemesh/canary-release/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: canary-rule
  labels:
    app: sample
spec:
  host: sample
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: final
    labels:
      version: final
