ops/servicemesh/canary-release/gateway-vs-canary0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-vs
  labels:
    app: sample
spec:
  hosts:
  - "test.frieza.local"
  gateways:
  - canary-gateway
  http:
  # 安定バージョンのv1のみにリクエスト振り向け
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: sample
        subset: v1
